# parc

./: .gitignore  Cargo.toml  README.md  README.tr.md
src/: archive.rs  backup.rs  clean.rs  crypto.rs  detect.rs  git.rs  lib.rs  main.rs  manifest.rs  model.rs  recipe.rs  render.rs  rules.rs  scan.rs  setup.rs
tests/: safety.rs
