[package]
name = "parc"
version = "0.1.0"
edition = "2021"
description = "Project Archive - analyze, shrink and archive development projects"
license = "MIT"

[lib]
name = "parc"
path = "src/lib.rs"

[[bin]]
name = "parc"
path = "src/main.rs"

[dependencies]
age = "0.12.1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
rpassword = "7.5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
zstd = { version = "0.13", features = ["zstdmt"] }

[profile.release]
opt-level = 3
lto = true
strip = true

[dev-dependencies]
age = "0.12.1"
